--- a/resources/view/index.html
+++ b/resources/view/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
+    <title th:text="#{index.title}">JiraRush: мини система отслеживания ошибок</title>
+</head>
 <!--/*@thymesVar id="authUser" type="com.javarush.jira.login.AuthUser"*/-->
 
-<th:block th:replace="~{layout/main::page(title='JiraRush: mini bugtracking system',appMain=~{::appMain})}">
+<th:block th:replace="~{layout/main::page(title=#{index.title},appMain=~{::appMain})}">
+
+    <!--<th:block th:replace="~{layout/main::page(title='JiraRush: mini bugtracking system',appMain=~{::appMain})}">-->
     <appMain>
-        <h1>JiraRush Home page</h1>
+        <h1 th:text="#{index.homepage}">JiraRush Home page</h1>
+        <div>
+            <a href="?lang=en">English</a> |
+            <a href="?lang=ru">Русский</a> |
+            <a href="?lang=it">Italiano</a>
+        </div>
         <div th:if="${authUser} != null">
             <form action="/ui/logout" method="post">
-                <button class="btn btn-primary btn-lg mt-3" type="submit">Logout</button>
+                <button class="btn btn-primary btn-lg mt-3" type="submit" th:text="#{index.logout}">Logout</button>
             </form>
         </div>
+
+
+        <!--        <h1>JiraRush Home page</h1>-->
+        <!--        <div th:if="${authUser} != null">-->
+        <!--            <form action="/ui/logout" method="post">-->
+        <!--                <button class="btn btn-primary btn-lg mt-3" type="submit">Logout</button>-->
+        <!--            </form>-->
+        <!--        </div>-->
     </appMain>
 </th:block>
